<resources>
    <string name="app_name">VR_Labirynth</string>
    <string name="score">Score</string>
    <string name="player_name">Player Name</string>
    <string name="no">No.</string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="new_game">NEW GAME</string>
    <string name="load">LOAD</string>
    <string name="exit">EXIT</string>
    <string name="empty_slot">Empty Slot\nStart new game</string>
    <string name="load_game">Load Game</string>
    <string name="empty_save">Empty save</string>
    <string name="game_saved">Game Saved</string>
    <string name="hold_to_delete_saved_game">Hold to delete saved game.</string>
</resources>