<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainMenuLayout"
    android:orientation="vertical"
    android:background="@drawable/gradient_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:background="@drawable/buttons_background"
        android:text="@string/new_game"
        android:textStyle="bold"
        android:fontFamily="@font/itim_regular"
        android:textColor="@color/text_white"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:shadowDx="1"
        android:shadowDy="1"
        android:textSize="23sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttons_background"
        android:text="@string/load"
        android:textStyle="bold"
        android:fontFamily="@font/itim_regular"
        android:textColor="@color/text_white"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:shadowDx="1"
        android:shadowDy="1"
        android:textSize="23sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/newGameButton"
        app:layout_constraintStart_toStartOf="@+id/newGameButton"
        app:layout_constraintTop_toBottomOf="@+id/newGameButton" />

    <Button
        android:id="@+id/highScoresButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttons_background"
        android:text="@string/high_scores"
        android:textStyle="bold"
        android:fontFamily="@font/itim_regular"
        android:textColor="@color/text_white"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:shadowDx="1"
        android:shadowDy="1"
        android:textSize="23sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/loadButton"
        app:layout_constraintStart_toStartOf="@+id/loadButton"
        app:layout_constraintTop_toBottomOf="@+id/loadButton" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttons_background"
        android:text="@string/exit"
        android:textSize="23sp"
        android:textStyle="bold"
        android:fontFamily="@font/itim_regular"
        android:textColor="@color/text_white"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:shadowDx="1"
        android:shadowDy="1"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/highScoresButton"
        app:layout_constraintStart_toStartOf="@+id/highScoresButton"
        app:layout_constraintTop_toBottomOf="@+id/highScoresButton" />
</androidx.constraintlayout.widget.ConstraintLayout>