<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/highScoresLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".activities.HighScoresActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="320dp"
        android:layout_height="396dp"
        android:background="@drawable/buttons_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605">

        <TableLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/header"
                android:layout_width="300dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/playerPlace"
                    android:layout_width="50dp"
                    android:gravity="center"
                    android:text="@string/no"
                    android:fontFamily="@font/itim_regular"
                    android:textColor="@color/text_white"
                    android:shadowColor="@color/black"
                    android:shadowRadius="10"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/playerName"
                    android:layout_width="170dp"
                    android:gravity="center"
                    android:text="@string/player_name"
                    android:fontFamily="@font/itim_regular"
                    android:textColor="@color/text_white"
                    android:shadowColor="@color/black"
                    android:shadowRadius="10"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/playerScore"
                    android:layout_width="80dp"
                    android:gravity="center"
                    android:text="@string/score"
                    android:fontFamily="@font/itim_regular"
                    android:textColor="@color/text_white"
                    android:shadowColor="@color/black"
                    android:shadowRadius="10"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:textSize="23sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="51dp"
        android:layout_height="38dp"
        android:paddingHorizontal="0dp"
        android:paddingVertical="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttons_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:textSize="25sp"
        android:text="@string/high_scores"
        android:textStyle="bold"
        android:fontFamily="@font/itim_regular"
        android:textColor="@color/text_white"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:shadowDx="1"
        android:shadowDy="1"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>